--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ body {
     min-height: 300px;
 }
 
-#carouselButton {
+#carouselButtonGroup {
     right: 0px;
     position: absolute;
     bottom: 0px;
